Доделана работа со справочником кодов стран. Добавление, удаление, редактирование. Нет валидации данных.

--- a/app/src/main/res/layout/frg_settings_country.xml
+++ b/app/src/main/res/layout/frg_settings_country.xml
@@ -1,31 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    >
-    <TextView
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    tools:context="pl.pionwit.wpw.MainActivity">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="@string/country_codes"
+            android:textSize="20dp" />
+
+        <ListView
+            android:id="@+id/lvCountry"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        </ListView>
+
+    </LinearLayout>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fabAddCountry"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="@string/country_codes"
-        android:textSize="20dp"
-        />
-    <ListView
-        android:id="@+id/lvCountry"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        android:src="@mipmap/ic_plus" />
 
-    </ListView>
-    <TextView
-        android:id="@id/android:empty"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="@string/empty">
-    </TextView>
-
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
