--- a/app/src/main/res/layout/item_country.xml
+++ b/app/src/main/res/layout/item_country.xml
@@ -3,30 +3,31 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="32dp"
     android:id="@+id/llCountry"
+    android:layout_gravity="center_vertical"
+
     >
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/ivCountryFlag"
-        android:layout_gravity="center_vertical"
-        android:src="@mipmap/ic_phone"
-        />
+
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="56dp"
         android:layout_height="wrap_content"
         android:id="@+id/tvCountryCod"
         android:layout_marginLeft="16dp"
         android:layout_gravity="center_vertical"
-        android:text="TExt"
         />
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:id="@+id/tvCountryName"
         android:layout_gravity="center_vertical"
         android:layout_marginLeft="16dp"
-        android:text="YYYUUII"
+        />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tvCountryLitlName"
+        android:layout_gravity="center_vertical"
+        android:layout_marginLeft="16dp"
         />
 </LinearLayout>
