--- a/app/src/main/res/layout/content_settings.xml
+++ b/app/src/main/res/layout/content_settings.xml
@@ -1,67 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:weightSum="3"
     android:layout_marginTop="?attr/actionBarSize"
-    >
+    android:orientation="horizontal"
+    android:weightSum="3">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_weight="2"
         android:layout_marginLeft="16dp"
-        >
+        android:layout_weight="2"
+        android:orientation="vertical">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:text="@string/lists"
-            android:textSize="20dp"
-            />
+            android:textSize="20dp" />
+
         <LinearLayout
+            android:id="@+id/llSettingCountryCod"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:orientation="horizontal"
-            android:id="@+id/llSettingCountryCod"
 
             >
+
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@mipmap/ic_wan"
                 android:layout_gravity="center_vertical"
-                />
+                android:src="@mipmap/ic_wan" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/country_codes"
-                android:textSize="16dp"
-                android:layout_marginLeft="16dp"
                 android:layout_gravity="center_vertical"
-                />
+                android:layout_marginLeft="16dp"
+                android:text="@string/country_codes"
+                android:textSize="16dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/llSettingCategory"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:src="@mipmap/ic_checkbox_multiple_marked_outline" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="16dp"
+                android:text="@string/category"
+                android:textSize="16dp" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:orientation="horizontal"
-            android:id="@+id/llSettingCategory"
+            android:id="@+id/llSettingLevel"
             >
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@mipmap/ic_checkbox_multiple_marked_outline"
+                android:src="@mipmap/ic_account_key"
                 android:layout_gravity="center_vertical"
                 />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/category"
+                android:text="@string/level"
                 android:textSize="16dp"
                 android:layout_marginLeft="16dp"
                 android:layout_gravity="center_vertical"
@@ -69,12 +87,12 @@
         </LinearLayout>
 
     </LinearLayout>
+
     <FrameLayout
+        android:id="@+id/flSettingsRez"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:id="@+id/flSettingsRez"
-        >
+        android:layout_weight="1">
 
     </FrameLayout>
 
