--- a/app/src/main/res/layout/frg_settings_country.xml
+++ b/app/src/main/res/layout/frg_settings_country.xml
@@ -5,7 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="pl.pionwit.wpw.MainActivity">
+    tools:context="pl.pionwit.wpw.MainActivity"
+    android:layout_marginRight="16dp"
+    android:layout_marginLeft="16dp"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
