--- a/app/src/main/res/layout/frg_settings_level.xml
+++ b/app/src/main/res/layout/frg_settings_level.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    tools:context="pl.pionwit.wpw.MainActivity"
     android:layout_marginRight="16dp"
-    android:layout_marginLeft="16dp"
-    tools:context="pl.pionwit.wpw.MainActivity">
+    android:layout_marginLeft="16dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,20 +18,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:text="@string/category"
+            android:text="@string/level"
             android:textSize="20dp" />
 
         <ListView
-            android:id="@+id/lvCategory"
+            android:id="@+id/lvLevel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-
         </ListView>
 
     </LinearLayout>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fabAddCategory"
+        android:id="@+id/fabAddLevel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
